<resources>
    <string name="app_name">YoArbitro</string>
    <string name="btnIniciarSesion">Ingresar</string>

    <string name="abrirNav">Abrir el menu</string>
    <string name="cerrarNav">Cerrar el menu</string>

    <!--RegistroActivity-->
    <string name="crearCuenta">Registrate</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="nombreEt">Nombre</string>
    <string name="edadEt">Edad</string>
    <string name="localidadEt">Localidad</string>
    <string name="numeroEt">Numero</string>
    <string name="correoEt">Correo electronico</string>
    <string name="contrasenaEt">Contraseña</string>
    <string name="confirmarContrasenaEt">Confirmar contraseña</string>
    <string name="btnTengoUnaCuenta">¿Tienes una cuenta?</string>
    <string name="btnTengoUnaCuentaSegunda">Clic aquí.</string>

    <!-- IniciarSesionActividad-->
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="correologin">Correo</string>
    <string name="passwordLogin">Contraseña</string>
    <string name="usuarioNuevo">¿No tienes una cuenta?</string>
    <string name="usuarioNuevoSegundo">Registrate aquí.</string>
    <string name="bienvenidaTexto">Bienvenido a YoArbitro</string>

    <!-- MenuPrincipalActivity -->
    <string name="btnSeleccionEquipoUno">Clic para seleccionar equipo 1</string>
    <string name="btnSeleccionEquipoDos">Clic para seleccionar equipo 2</string>
    <string name="btnNuevoJuego">Comenzar juego</string>


    <!-- MenuPrincipalAdminActivity -->
    <string name="bienvenidoAdminPrincipal">Bienvenido(a)</string>
    <string name="nombresAdminPrincipal">--</string>
    <string name="correoAdminPrincipal">--</string>
    <string name="btnVerArbitros">Consultar Árbitros</string>
    <string name="btnRegistrarEquipos">Registrar Equipos</string>
    <string name="btnCerrarSesionAdmin">Cerrar Sesión</string>
    <string name="txtListaEquipos">Tus equipos</string>

    <!-- activity_registrar_equiposs -->
    <string name="tituloRegistrarEquipos">Registrar Equipos</string>
    <string name="nombreEquipo">Nombre del equipo</string>
    <string name="nombreDelegado">Nombre del delegado</string>
    <string name="numContacto">Número contacto</string>
    <string name="btnAceptarRegistro">Aceptar</string>
    <string name="btnCancelarRegistro">Cancelar</string>

    <!--activity agregar equipos-->
    <string name="tituloEquipo">Seleccionar equipo</string>

    <!-- ConsultarArbitrosActivity -->
    <string name="tituloArbitros">Arbitros registrados</string>

    <!-- ConsultarCedulasActivity-->
    <string name="tituloConsultarCedulas">Cedulas guardadas</string>

    <!-- AgregarJugadoresActivity-->
    <string name="tituloAgregarJugadores">Agrega jugadores</string>

    <!-- AgregarJugadoresDos (Formulario) -->
    <string name="tituloRegistrarJugadores">Datos del jugador</string>
    <string name="nombreDeJugador">Nombre de jugador</string>
    <string name="numeroDeJugador">Numero de jugador</string>

    <!-- InformacionEquiposActivity -->
    <string name="tituloInformacionEquipos">Editar información de mi equipo</string>

    <!-- InformacionJugadoresActivity -->
    <string name="tituloInformacionJugadores">Información de Jugador</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- InformacionArbitrosActivity -->
    <string name="tituloInformacioArbitros">Árbitros registrados</string>




</resources>